<resources>
    <string name="app_name">Challenge Chapter 2</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="good_18">Good (18%)</string>
    <string name="ok_15">OK (15%)</string>
    <string name="tip_amount">Tip Amount</string>
    <string name="calculate">Calculate</string>
    <string name="tip_image">tip_image</string>
    <string name="cost_of_service">Cost of Service</string>
</resources>